--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "restapi_zh",
-    "version": "1.4.0",
-    "description": "Kezdőcsomag a REST API & GraphQL zárthelyihez",
+    "name": "nodejs_zh",
+    "version": "1.4.1",
+    "description": "Kezdőcsomag a Node.JS zárthelyihez",
     "author": "Tóta Dávid",
     "license": "MIT",
     "scripts": {
@@ -15,51 +15,50 @@
     },
     "dependencies": {
         "@faker-js/faker": "^7.6.0",
-        "@fastify/autoload": "^5.4.1",
-        "@fastify/jwt": "^6.3.2",
-        "@graphql-tools/schema": "^9.0.10",
-        "bcrypt": "^5.0.1",
+        "@fastify/autoload": "^5.7.1",
+        "@fastify/jwt": "^6.7.1",
+        "@graphql-tools/schema": "^9.0.19",
+        "bcrypt": "^5.1.0",
         "chalk": "^4.1.2",
         "crypto-js": "^4.1.1",
-        "date-and-time": "^2.3.1",
-        "dotenv": "^16.0.1",
-        "fastify": "^4.10.2",
-        "fluent-json-schema": "^4.0.0",
+        "date-and-time": "^2.4.3",
+        "dotenv": "^16.0.3",
+        "fastify": "^4.17.0",
+        "fluent-json-schema": "^4.1.0",
         "graphql": "^16.6.0",
-        "graphql-scalars": "^1.20.1",
+        "graphql-scalars": "^1.21.3",
         "http-status-codes": "^2.2.0",
         "indent-string": "^4.0.0",
-        "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
-        "lz-string": "^1.4.4",
-        "mercurius": "^11.3.0",
-        "sequelize": "^6.19.0",
+        "lz-string": "^1.5.0",
+        "mercurius": "^11.5.0",
+        "sequelize": "^6.31.0",
         "slug": "^5.3.0",
-        "sqlite3": "^5.0.8",
-        "table": "^6.8.0",
+        "sqlite3": "^5.1.6",
+        "table": "^6.8.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "adm-zip": "^0.5.9",
+        "adm-zip": "^0.5.10",
         "axios": "^0.27.2",
-        "chai": "^4.3.6",
+        "chai": "^4.3.7",
         "chai-as-promised": "^7.1.1",
         "chai-subset": "^1.6.0",
-        "deep-object-diff": "^1.1.7",
+        "deep-object-diff": "^1.1.9",
         "execa": "^5.1.1",
         "filesize": "^8.0.7",
         "find-free-port": "^2.0.0",
-        "graphql-request": "^5.0.0",
-        "inquirer": "^8.2.4",
+        "graphql-request": "^5.2.0",
+        "inquirer": "^8.2.5",
         "isbinaryfile": "^5.0.0",
         "json-diff": "^0.7.4",
-        "mocha": "^10.0.0",
-        "nodemon": "^2.0.16",
-        "object-treeify": "^2.0.1",
-        "prettier": "^2.6.2",
+        "mocha": "^10.2.0",
+        "nodemon": "^2.0.22",
+        "object-treeify": "^2.1.1",
+        "prettier": "^2.8.8",
         "rimraf": "^3.0.2",
-        "sequelize-cli": "^6.4.1",
+        "sequelize-cli": "^6.6.0",
         "strip-ansi": "^6.0.1",
-        "superstruct": "^0.15.4"
+        "superstruct": "^0.15.5"
     }
 }
