--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nodejs_zh",
-    "version": "1.4.2",
+    "version": "1.5.0",
     "description": "Kezdőcsomag a Node.js zárthelyihez",
     "author": "Tóta Dávid",
     "license": "MIT",
@@ -9,39 +9,47 @@
         "db": "npx rimraf database/database.sqlite && npx sequelize db:migrate --debug && npx sequelize db:seed:all --debug",
         "freshdb": "npm run db",
         "zip": "node zip.js",
-        "test": "node test/tester.js",
+        "test": "node test/update.js && node test/tester.js",
+        "oldtest": "node test/tester.js",
         "tester": "npm run test",
+        "oldtester": "npm run oldtest",
         "prettier": "npx prettier --write \"**/*.{js,mjs,json,gql}\""
     },
     "dependencies": {
-        "@faker-js/faker": "^8.0.0",
-        "@fastify/autoload": "^5.7.1",
-        "@fastify/jwt": "^6.7.1",
-        "@graphql-tools/schema": "^9.0.19",
-        "bcrypt": "^5.1.0",
+        "@faker-js/faker": "^8.4.1",
+        "@fastify/autoload": "^5.8.1",
+        "@fastify/jwt": "^8.0.0",
+        "@graphql-tools/schema": "^10.0.3",
+        "@npmcli/fs": "^3.1.1",
+        "bcrypt": "^5.1.1",
         "chalk": "^4.1.2",
-        "crypto-js": "^4.1.1",
+        "crypto-js": "^4.2.0",
         "date-and-time": "^2.4.3",
-        "dotenv": "^16.0.3",
-        "fastify": "^4.17.0",
-        "fluent-json-schema": "^4.1.0",
-        "graphql": "^16.6.0",
-        "graphql-scalars": "^1.21.3",
-        "http-status-codes": "^2.2.0",
+        "dotenv": "^16.4.5",
+        "fastify": "^4.26.2",
+        "fluent-json-schema": "^4.2.1",
+        "graphql": "^16.8.1",
+        "graphql-scalars": "^1.23.0",
+        "http-status-codes": "^2.3.0",
         "indent-string": "^4.0.0",
         "lodash": "^4.17.21",
         "lz-string": "^1.5.0",
-        "mercurius": "^11.5.0",
-        "sequelize": "^6.31.0",
+        "mercurius": "^14.1.0",
+        "sequelize": "^6.37.3",
         "slug": "^5.3.0",
-        "sqlite3": "^5.1.6",
-        "table": "^6.8.1",
+        "sqlite3": "^5.1.7",
+        "table": "^6.8.2",
         "uuid": "^8.3.2"
     },
+    "overrides": {
+        "uri-js": "npm:uri-js-replace",
+        "whatwg-url": "npm:whatwg-url@14.0.0",
+        "cacache": "npm:cacache@18.0.3"
+    },
     "devDependencies": {
-        "adm-zip": "^0.5.10",
-        "axios": "^0.27.2",
-        "chai": "^4.3.7",
+        "adm-zip": "^0.5.12",
+        "axios": "^1.6.8",
+        "chai": "^4.4.1",
         "chai-as-promised": "^7.1.1",
         "chai-subset": "^1.6.0",
         "deep-object-diff": "^1.1.9",
@@ -49,15 +57,15 @@
         "filesize": "^8.0.7",
         "find-free-port": "^2.0.0",
         "graphql-request": "^5.2.0",
-        "inquirer": "^8.2.5",
-        "isbinaryfile": "^5.0.0",
+        "inquirer": "^8.2.6",
+        "isbinaryfile": "^5.0.2",
         "json-diff": "^0.7.4",
-        "mocha": "^10.2.0",
-        "nodemon": "^2.0.22",
+        "mocha": "^10.4.0",
+        "nodemon": "^3.1.0",
         "object-treeify": "^2.1.1",
         "prettier": "^2.8.8",
         "rimraf": "^3.0.2",
-        "sequelize-cli": "^6.6.0",
+        "sequelize-cli": "^6.6.2",
         "strip-ansi": "^6.0.1",
         "superstruct": "^0.15.5"
     }
